:bug: Put footer nav behind rotate lock screen

--- a/src/styles/_component.footer.scss
+++ b/src/styles/_component.footer.scss
@@ -3,7 +3,7 @@
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	z-index: 999;
+	z-index: 995;
 	&__group {
 		display: flex;
 		justify-content: space-around;
